corrected bad output comment